<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Edit" -->
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />

    <!-- "Order" -->
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_local_shipping_white_24dp"
        android:title="@string/action_order"
        app:showAsAction="ifRoom" />

    <!-- "Delete" -->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
</menu>